# dtvmgr

./: .clippy.toml  .gitignore  .gitleaksignore  .octocov.yml  .tagpr  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  dtvmgr.mapping.toml  mise.local.toml  mise.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.claude/skills/coding/: SKILL.md
.claude/skills/coding/prompts/: implement.md  write-tests.md
.claude/skills/coding/references/: common-errors.md
.claude/skills/deps-sync/: SKILL.md
.claude/skills/deps-sync-crates/: SKILL.md
.claude/skills/deps-sync-mise/: SKILL.md
.claude/skills/deps-sync-tests/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/dev/prompts/: design.md  research.md
.claude/skills/dev/references/: workflow.md
.claude/skills/docs/: SKILL.md
.claude/skills/docs/prompts/: generate-rustdoc.md  generate-spec.md
.claude/skills/docs/references/: rustdoc-patterns.md  spec-templates.md
.claude/skills/project-conventions/: SKILL.md
.claude/skills/project-conventions/references/: ast-grep-rules.md  module-and-project-structure.md  testing-patterns.md
.claude/skills/qa/: SKILL.md
.claude/skills/qa/prompts/: fix-clippy.md  fix-lint.md
.claude/skills/review/: SKILL.md
.claude/skills/review/prompts/: review-code.md  review-design.md  review-docs.md
.claude/skills/review/references/: code-checklist.md  design-checklist.md
.devcontainer/: Caddyfile  devcontainer.json  generate-jaeger-ui-config.sh  initializeCommand.sh  jaeger-config.yaml  jaeger-ui.js  o2-env.sh  o2-import-dashboards.sh  postStartCommand.sh
.github/: codeql-config.yml  labeler.yml  labels.json  project-config.json  release.yml  tagpr-template.md
.github/actions/act-audit/: action.yaml
.github/actions/act-setup-rust/: action.yaml
.github/actions/create-release/: action.yaml
.github/actions/upload-release-assets/: action.yaml
.github/rulesets/: default_branch.json  tags.json
.github/workflows/: _orchestrator.yaml  actionlint.yaml  audit.yaml  cleanup.yaml  codeql.yaml  docs-ci.yaml  miri.yaml  prebuild-container.yaml  release-build.yaml  release-manager.yaml  release.yaml  rust-ci.yaml  tagpr.yaml
.mise/: tasks.toml
ast-rules/: _rules.md  error-context-required.yml  no-get-prefix.yml  no-real-ipv6.yml
crates/dtvmgr-api/: Cargo.toml
crates/dtvmgr-api/src/: lib.rs  metrics.rs  rate_limiter.rs
crates/dtvmgr-api/src/epgstation/: api.rs  client.rs  mod.rs  rate_limiter.rs  types.rs
crates/dtvmgr-api/src/syoboi/: api.rs  client.rs  mod.rs  params.rs  rate_limiter.rs  types.rs  util.rs  xml.rs
crates/dtvmgr-api/src/tmdb/: api.rs  client.rs  mod.rs  rate_limiter.rs  types.rs
crates/dtvmgr-cli/: Cargo.toml  build.rs
crates/dtvmgr-cli/src/: main.rs
crates/dtvmgr-cli/src/config/: config.rs  mapping.rs  mod.rs  paths.rs
crates/dtvmgr-cli/src/tui/: channel_selector.rs  fmt.rs  mod.rs  state.rs  ui.rs
crates/dtvmgr-cli/src/tui/encode_selector/: mod.rs  state.rs  ui.rs
crates/dtvmgr-cli/src/tui/normalize_viewer/: mod.rs  state.rs  ui.rs
crates/dtvmgr-cli/src/tui/progress_viewer/: state.rs  ui.rs
crates/dtvmgr-cli/src/tui/title_viewer/: mod.rs  state.rs  ui.rs
crates/dtvmgr-cli/tests/: cli_subcommands_test.rs  cli_syoboi_test.rs
crates/dtvmgr-db/: Cargo.toml
crates/dtvmgr-db/src/: channels.rs  connection.rs  lib.rs  migrations.rs  programs.rs  recorded.rs  titles.rs
crates/dtvmgr-jlse/: Cargo.toml
crates/dtvmgr-jlse/src/: avs.rs  channel.rs  lib.rs  param.rs  pipeline.rs  progress.rs  settings.rs  storage.rs  types.rs  validate.rs
crates/dtvmgr-jlse/src/command/: chapter_exe.rs  ffmpeg.rs  ffprobe.rs  join_logo_scp.rs  logoframe.rs  mod.rs  tsdivider.rs
crates/dtvmgr-jlse/src/output/: avs.rs  chapter.rs  ffmpeg_filter.rs  mod.rs
crates/dtvmgr-tsduck/: Cargo.toml
crates/dtvmgr-tsduck/src/: command.rs  eit.rs  lib.rs  pat.rs  seek.rs
crates/dtvmgr-tui/: Cargo.toml
crates/dtvmgr-tui/src/: channel_selector.rs  fmt.rs  lib.rs  ui.rs
crates/dtvmgr-tui/src/encode_selector/: mod.rs  state.rs  ui.rs
crates/dtvmgr-tui/src/normalize_viewer/: mod.rs  state.rs  ui.rs
crates/dtvmgr-tui/src/progress_viewer/: mod.rs  state.rs  ui.rs
crates/dtvmgr-tui/src/title_viewer/: mod.rs  state.rs  ui.rs
crates/dtvmgr-vmaf/: Cargo.toml
crates/dtvmgr-vmaf/src/: encode.rs  encoder.rs  lib.rs  sample.rs  search.rs  types.rs  vmaf.rs
docs/: project_rules.md
docs/o2-dashboards/: o2-storage.json
docs/specs/: PLAN.md
docs/specs/api-research/: api-data-collection.md  api-spec.md
docs/specs/archive/: IMPROVEMENT_PLAN.md  batch-rename-epgstation.md  er-diagram.md  ffmpeg-native-cut.md  filename-generation.md  rename-pipeline.md  tmdb-episode-matching.md  vmaf-crf-auto.md
docs/specs/components/: channel-selector-tui.md  er-diagram.md  jlse-cm-detection.md  tmdb-episode-matching.md
docs/specs/components/dtvmgr-api/: syoboiClient.md
docs/specs/components/dtvmgr-cli/: Architecture.md
docs/specs/components/dtvmgr-db/: Architecture.md
docs/specs/components/dtvmgr-jlse/: Architecture.md  channel.md  chapter.md  ffmpeg.md  ffmpeg_filter.md  ffprobe.md  logoframe.md  param.md  pipeline.md  settings.md  validate.md
docs/specs/components/dtvmgr-tsduck/: Architecture.md  command.md  eit.md  pat.md  seek.md
fixtures/epgstation/: channels.json  config.json  encode_queue.json  recorded.json
fixtures/syoboi/: ch_group_lookup_all.xml  ch_lookup_all.xml  empty_response.xml  prog_lookup_6309.xml  title_lookup_6309.xml
fixtures/tmdb/: genre_tv_list.json  movie_alternative_titles_916224.json  search_movie_suzume.json  search_multi_empty.json  search_multi_lupin.json  search_multi_with_person.json  search_tv_empty.json  search_tv_spy_family.json  tv_alternative_titles_31572.json  tv_details_120089.json  tv_season_120089_1.json
src/: libs.rs  main.rs
src/libs/: hello.rs
src/libs/syoboi/: api.rs  client.rs  mod.rs  rate_limiter.rs  types.rs  util.rs  xml.rs
src/libs/tmdb/: client.rs  mod.rs  rate_limiter.rs
tests/: cli_api_test.rs  integration_test.rs
(+17 files in other folders)
