[package]
name = "dtvmgr-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "API client library for dtvmgr (Syoboi Calendar, TMDB)"

[features]
default = []
otel = ["dep:opentelemetry"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
url = { workspace = true }

# OpenTelemetry (optional, behind `otel` feature)
opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-mock = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
