[package]
name = "dtvmgr-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database cache layer for dtvmgr"

[dependencies]
anyhow = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
