[package]
name = "dtvmgr-vmaf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VMAF-based quality parameter search for video encoding"

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
